2005-02-06  Derek Price  <derek@ximbiot.com>

	* texi2html.pl (#!): Let `perl texi2html.pl' work.
	* missing-texi2html: Handle `perl texi2html.pl' rather than a single
	script.
	* doc/Makefile.am (texi2html.html): Call `$PERL texi2html.pl' to avoid
	dependency on texi2html.

2005-02-06  Patrice Dumas  <dumas@centre-cired.fr>

	* Makefile.am: manage_i18n.pl is created by ./configure therefore
	at $(top_builddir).
	add html-local and dist-local such that the texi2html script is
	built with make html or make dist.
	* doc/Makefile.am: texi2html.html depends on the texi2html sources, 
	not on the script.
	* README, doc/texi2html.texi: advertise the required perl version
	and the modules used in the scripts.

2005-02-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: fix broken detection of USE_UNICODE.

2005-02-06  Patrice Dumas  <dumas@centre-cired.fr>

	* manage_i18n.pl: remove and replace with...
	* manage_i18n.pl.in: ... added
	* configure.ac, manage_i18n.pl.in: detect whether it is possible to 
	do the translations buildup (--enable-translations).
	* doc/Makefile.am: rebuild texi2html as a dependency for the manual.
	(trick from Derek).
	* doc/texi2html.texi: sync.
	* Makefile.am,manage_i18n.pl.in: add command line arguments to
	manage_i18n.pl.in such that it is possible to build from outside of 
	the source dir.
	* Makefile.am: have texi2html depend on $(texi2html_SOURCES) otherwise
	the texi2html isn't rebuild when out of date.

2005-02-05  Derek Price  <derek@ximbiot.com>

	* NEWS: Note use of Automake 1.9.3.

2005-02-05  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Remove texi2html.1 and add texi2html_configure.pl.
	* Makefile.am: Some reformatting.
	(EXTRA_DIST): Add texi2html.spec.in.
	(texi2html): Make target executable.
	(texi2html.spec): New target.
	(man_MANS): Move to...
	* doc/Makefile.am (man_MANS): ...here.
	* configure.ac: Don't generate texi2html.1 or texi2html.spec.  Remove
	old comments.
	* texi2html.1.in: Move to...