@@ -1,5 +1,10 @@
 2005-02-06  Derek Price  <derek@ximbiot.com>
 
+	* Makefile.am (texi2html_SOURCES): Rename to...
+	(texi2html_sources): ...this to avoid an Automake 1.9.4 warning.
+
+2005-02-06  Derek Price  <derek@ximbiot.com>
+
 	* texi2html.pl (#!): Let `perl texi2html.pl' work.
 	* missing-texi2html: Handle `perl texi2html.pl' rather than a single
 	script.
@@ -88,7 +93,7 @@
 	old perl. Report from Sven de Vries.
 	* T2h_i18n.pm: remove useless use that prevented to run on IRIX. 
 	Report from ezra peisach.
-	* Tests/*: remove some $Id: ChangeLog,v 1.190 2005/02/07 04:52:46 dprice Exp $ rcs tags
+	* Tests/*: remove some $Id: ChangeLog,v 1.191 2005/02/07 05:10:11 dprice Exp $ rcs tags
 
 2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>
 
